# modern_cpp-test

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main  main.cpp  my_tests.cpp
.cache/clangd/index/: CMakeCCompilerId.c.962D4F03110BCD01.idx  CMakeCXXCompilerId.cpp.57A6C57DF6AE1E0A.idx  main.cpp.BDBD8A91F5BAF8E9.idx  mod_helper.cpp.BA573FA791532B06.idx
includes/: CMakeLists.txt  mod_helper.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
