cmake_minimum_required(VERSION 3.15)
project(modern_cpp)
SET (CMAKE_CXX_STANDARD 17)
add_executable(main main.cpp)
add_subdirectory(includes)
target_include_directories(main PRIVATE includes)
target_link_libraries(main PRIVATE libmodh)
SET (CMAKE_CXX_COMPILER "/usr/bin/clang++")
SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
